<resources>
    <string name="app_name">WildTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WildTask</string>
    <string name="nav_header_subtitle">Elephants Rhinos and People</string>
    <string name="nav_header_desc">Melorane Reserve</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Current Tasks</string>
    <string name="menu_calendar">Schedule</string>
    <string name="menu_splash">WildTask</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_back_to_login">Go Back To Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_registration">Registration</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_sur">Surname</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Please enter a name</string>
    <string name="invalid_surname">Please enter a surname</string>
    <string name="invalid_details">Username or password not found</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hmm… seems like this page isn\'t finished yet.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="tree_with_person_underneath">Tree with person underneath</string>
    <string name="welcome_to_wildtask">Welcome to WildTask</string>
    <string name="get_started"> Get Started</string>
    <string name="epi_use">EPI-USE</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="descriptionheading">Description:</string>
    <string name="loading">Loading…</string>
    <string name="timelineheading">Timeline:</string>
    <string name="team_membersheading">Team Members:</string>
    <string name="stock_neededheading">Stock Needed:</string>
    <string name="equipment_neededheading">Equipment Needed:</string>
    <string name="statusheading">Status:</string>
    <string name="post_update"> Update</string>
    <string name="user_profile_picture">User Profile picture</string>
    <string name="username">Email:</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="filter_dates">Clear</string>
    <string name="add_stock_button">Add Stock</string>
    <string name="add_equipment_button">Add Equipment</string>
    <string name="overview">Overview</string>
    <string name="resources">Resources</string>
    <string name="team">Team</string>
    <string name="equipment_heading">Equipment</string>
    <string name="pictures">Pictures:</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="back">Back</string>
    <string name="profile_pic_explanation_update">Profile picture of the employee who posted the update</string>
    <string name="quantity">Quantity</string>
    <string name="request_stock">Request Stock</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="due_soon">Due Soon</string>
    <string name="sorted_by_activity">Sorted by Activity</string>
    <string name="completed_from_db">COMPLETED</string>
    <string name="due">Due:</string>
    <string name="bypass">Bypass</string>
    <string name="registration_code">Registration Code</string>
    <string name="change_image">Change Image</string>
    <string name="on_this_day">On this day:</string>
    <string name="add_timeline_update">Add Timeline Update</string>
    <string name="share_location">Share location</string>
    <string name="update_status_of_task">Update Status of task:</string>
    <string name="add_picture">Add Picture</string>
    <string name="describe_the_update">Describe the update…</string>
    <string name="refresh">Refresh</string>
    <string name="x">X</string>
    <string name="the_selected_image">The selected image</string>
    <string name="post_request">Post Request</string>
    <string name="add_stock">Add Stock</string>
    <string name="submit">Submit</string>
    <string name="request_equipment">Request Equipment</string>
    <string name="update_details">Update Details</string>
    <string name="upload_document">Upload Document</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="first_name">First Name</string>
    <string name="equipment_image">Equipment Image</string>
    <string name="feedback">Self-Reflection:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="handle_requests">Handle Requests</string>
    <string name="skills">Your Skills:</string>
    <string name="allskills">Add Skill:</string>
    <string name="skillLevel">Skill Level:</string>
</resources>